[package]
name = "tokio-tower-demo-transport"
version = "0.0.0"
edition = "2021"

[dependencies]
tower-service = "0.3"
tower = { version = "0.4", features = ["load"] }
futures-util = { version = "0.3", features = [ "sink" ] }
futures-core = "0.3"
futures-sink = "0.3"
tokio = { version = "1.0", features = [ "sync",  "rt-multi-thread",  "macros"] }
crossbeam = "0.8"
tracing = "0.1.2"
pin-project = "1.0"
tokio-tower = "0.6"